--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,9 @@ body {
 
 #container {
   margin: 0 auto;
-  max-width: 1000px;
-  width: 90%;
+  max-width: 100%;
+  height: auto;
+  width: auto\9;
 }
 
 .header {
